// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`express  > ctx 1`] = `
{
  "body": {
    "name": "test",
  },
  "params": {
    "test": "test",
  },
  "query": {
    "id": "1",
  },
}
`;

exports[`express  > ctx 2`] = `
{
  "body": {
    "name": "test",
  },
  "params": {
    "test": "test",
  },
  "query": {
    "id": "1",
  },
}
`;

exports[`express  > ctx 3`] = `
{
  "body": {
    "name": "test",
  },
  "params": {
    "test": "test",
  },
  "query": {
    "id": "2",
  },
}
`;
